--- a/pages/perfil.html
+++ b/pages/perfil.html
@@ -7,160 +7,163 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script><meta name="viewport" content="width=device-width, initial-scale=1">
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="..\css\main.css" rel="stylesheet">
     <script src="..\js\main.js"></script>
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">  
-        <a class="navbar-brand" href="#"> 
-            Gerenciador de Tarefas 
-        </a>
-
-        <button class="navbar-toggler" type="button" 
-        data-toggle="collapse"
-        data-target="#textoNavbar" aria-controls="textoNavbar"
-        aria-expanded="false" aria-label="Alterna Navegação"> 
-            <span class="navbar-toggler-icon"></span>
-        </button>
-
-        <div class="collapse navbar-collapse" id="textoNavbar">
-            <ul class="navbar-nav mr-auto">
-                <li class="nav-item">
-                    <a class="nav-link" href="index.html"> Home </a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="tarefas.html"> Tarefas </a>
-                </li>
-                <li class="nav-item active">
-                    <a class="nav-link" href="#"> Perfil </a>
-                </li>
-            </ul>
-            <span class="navbar-text">
-                <a href="login.html"> Logout </a> 
-            </span>
-        </div>
-    </nav>
-    <div class="container rounded bg-white mt-5 mb-5">
-        <div class="row">
-            <div class="col-md-3 border-right">
-                <div class="d-flex flex-column
-                align-items-center text-center p-3 py-5">
-                    <img class="rounded-circle mt-5"
-                        width="150px" 
-                        src="https://st3.depositphotos.com/15648834/17930/v/600/depositphotos_179308454-stock-illustration-unknown-person-silhouette-glasses-profile.jpg"/>
+    <nav class="navbar navbar-expand-lg
+     navbar-light bg-light">
+        <a href="#" class="navbar-brand"> 
+            Gerenciador de Tarefas</a>
+            <button class="navbar-toggler" type="button"
+            data-toggle="collapse" data-target="#textoNavbar"
+            aria-controls="textoNavbar" aria-expanded="false"
+            aria-label="Alternar Navegação">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="textoNavbar">
+                <ul class="navbar-nav mr-auto">
+                    <li class="nav-item">
+                        <a href="index.html" class="nav-link">Home</a>
+                    </li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="tarefa.html"
+                            id="navbarDropdown" role="button" data-toggle="dropdown"
+                            aria-haspopup="true" aria-expanded="false">
+                            Tarefas
+                        </a>
+                        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                            <a class="dropdown-item" href="tarefas.html"> Todas </a>
+                            <div class="dropdown-divider"></div>
+                            <a class="dropdown-item" href="tarefas.html"> Academicas </a>
+                            <a class="dropdown-item" href="tarefas.html"> Profissionais </a>
+                            <a class="dropdown-item" href="tarefas.html"> Pessoais </a>
+                        </div>
+                    </li>   
+                    <li class="nav-item active">
+                        <a href="#" class="nav-link">Perfil</a>
+                    </li>    
+                </ul>
+                <span class="navbar-text">
+                    <a href="login.html">Logout</a> 
+                </span>
+            </div>
+        </nav>
+        <div class="container rounded bg-white mt-5 mb-5">
+            <div class="row">
+                <div class="col-md-3 border-right">
+                    <div class="d-flex flex-column 
+                            align-items-center text-center
+                            p-3 py-5">
+                        <img class="rounded-circle mt-5"
+                            width="150px" 
+                            src="https://st3.depositphotos.com/15648834/17930/v/600/depositphotos_179308454-stock-illustration-unknown-person-silhouette-glasses-profile.jpg">
                         <span class="font-weight-bold">Luciano</span>
                         <span class="text-black-50"> 
                             luciano.silva@ifpb.edu.br
                         </span>
+                    </div>
                 </div>
-            </div>
-            <div class="col-md-5 border-right">
-                <div class="p-3 py-5">
-                    <div class="d-flex 
-                        justify-content-center
-                        align-items-center mb-3">
-                            <h4> Configurações do Perfil </h4>
-                    </div>
-                    <div class="row mt-2">
-                        <div class="col-md-6">
-                            <label class="labels"> 
-                                Nome
-                            </label>
-                            <input type="text" class="form-control"
-                              placeholder="primeiro nome" value="">
+                <div class="col-md-5 border-right">
+                    <div class="p-3 py-5">
+                        <div class="d-flex 
+                            justify-content-center
+                            align-items-center mb-3">
+                                <h4 class="text-right"> 
+                                    Configurações do Perfil 
+                                </h4>
                         </div>
-                        <div class="col-md-6">
-                            <label class="labels"> 
-                                Sobrenome
-                            </label>
-                            <input type="text" class="form-control"
-                              placeholder="segundo nome" value="">
+                        <div class="row mt-2">
+                            <div class="col-md-6">
+                                <label class="labels">
+                                    Nome
+                                </label>
+                                <input type="text" class="form-control"
+                                    placeholder="primeiro nome"
+                                    value="">
+                            </div>
+                            <div class="col-md-6">
+                                <label class="labels">
+                                    Sobrenome
+                                </label>
+                                <input type="text" class="form-control"
+                                    placeholder="segundo nome"
+                                    value="">
+                            </div>
                         </div>
-                    </div>
-                    <div class="row mt-3">
-                        <div class="col-md-12">
-                            <label class="labels">
-                                Número de Telefone
-                            </label>
-                            <input type="text" class="form-control"
-                                placeholder="telefone para contato"
-                                value="">
+                        <div class="row mt-3">
+                            <div class="col-md-12">
+                                <label>Número de Telefone</label>
+                                <input type="text" class="form-control"
+                                    placeholder="digite o telefone"
+                                    value="">
+                            </div> 
+                            <div class="col-md-12">
+                                <label>Bairro</label>
+                                <input type="text" class="form-control"
+                                    placeholder="digite o bairro"
+                                    value="">
+                            </div>  
+                            <div class="col-md-12">
+                                <label>Rua</label>
+                                <input type="text" class="form-control"
+                                    placeholder="digite a rua"
+                                    value="">
+                            </div>  
+                            <div class="col-md-12">
+                                <label>CEP</label>
+                                <input type="text" class="form-control"
+                                    placeholder="digite o CEP"
+                                    value="">
+                            </div>  
+                            <div class="col-md-12">
+                                <label>Estado</label>
+                                <input type="text" class="form-control"
+                                    placeholder="digite o estado"
+                                    value="">
+                            </div> 
+                            <div class="col-md-12">
+                                <label>E-mail</label>
+                                <input type="email" class="form-control"
+                                    placeholder="digite o email"
+                                    value="">
+                            </div> 
+                            <div class="col-md-12">
+                                <label>Pais</label>
+                                <input type="text" class="form-control"
+                                    placeholder="digite o pais"
+                                    value="">
+                            </div>          
                         </div>
-                        <div class="col-md-12">
-                            <label class="labels">
-                                Bairro
-                            </label>
-                            <input type="text" class="form-control"
-                                placeholder="digite o bairro"
-                                value="">
-                        </div>
-                        <div class="col-md-12">
-                            <label class="labels">
-                                Rua
-                            </label>
-                            <input type="text" class="form-control"
-                                placeholder="digite a rua"
-                                value="">
-                        </div>
-                        <div class="col-md-12">
-                            <label class="labels">
-                                CEP
-                            </label>
-                            <input type="text" class="form-control"
-                                placeholder="digite o CEP"
-                                value="">
-                        </div>
-                        <div class="col-md-12">
-                            <label class="labels">
-                                Estado
-                            </label>
-                            <input type="text" class="form-control"
-                                placeholder="digite o estado"
-                                value="">
-                        </div>
-                        <div class="col-md-12">
-                            <label class="labels">
-                                E-mail
-                            </label>
-                            <input type="email" class="form-control"
-                                placeholder="digite o e-mail"
-                                value="">
-                        </div>
-                    </div>
-                    <div class="mt-5 text-center">
-                        <button class="btn btn-primary profile-button"
-                            type="button">
+                        <div class="mt-5 text-center">
+                            <button class="btn btn-primary profile-button"> 
                                 Salvar
-                        </button>
+                            </button>
+                        </div>  
+                    </div>    
+                </div>
+                <div class="col-md-4">
+                    <div class="p-3 py-5">
+                        <div class="d-flex
+                            justify-content-center
+                            align-items-center">
+                                <h4 class="text-right"> Informações de Login </h4>
+                        </div>
+                        <div class="col-md-12">
+                            <label class="labels">Login</label>
+                            <input type="text" class="form-control"
+                                value="">
+                        </div>
+                        <div class="col-md-12">
+                            <label class="labels">Senha</label>
+                            <input type="password" class="form-control"
+                                value="">
+                        </div>
                     </div>
                 </div>
             </div>
-            <div class="col-md-4">
-                <div class="p-3 py-5">
-                    <div class="d-flex justify-content-center
-                        align-items-center">
-                            <h4>
-                                Informações de Login
-                            </h4>
-                    </div>
-                    <div class="col-md-12">
-                        <label class="labels"> 
-                            Login
-                        </label>
-                        <input type="text" class="form-control"
-                            value="">
-                    </div>
-                    <div class="col-md-12">
-                        <label class="labels"> 
-                            Senha
-                        </label>
-                        <input type="password" class="form-control"
-                            value="">
-                    </div>
-                </div>
-            </div>                    
         </div>
-    </div>
     </body>
 </html>
