--- a/pages/tarefas.html
+++ b/pages/tarefas.html
@@ -7,40 +7,261 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script><meta name="viewport" content="width=device-width, initial-scale=1">
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="..\css\main.css" rel="stylesheet">
     <script src="..\js\main.js"></script>
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">  
-        <a class="navbar-brand" href="#"> 
-            Gerenciador de Tarefas 
-        </a>
-
-        <button class="navbar-toggler" type="button" 
-        data-toggle="collapse"
-        data-target="#textoNavbar" aria-controls="textoNavbar"
-        aria-expanded="false" aria-label="Alterna Navegação"> 
-            <span class="navbar-toggler-icon"></span>
-        </button>
-
-        <div class="collapse navbar-collapse" id="textoNavbar">
-            <ul class="navbar-nav mr-auto">
-                <li class="nav-item">
-                    <a class="nav-link" href="index.html"> Home </a>
-                </li>
-                <li class="nav-item active">
-                    <a class="nav-link" href="#"> Tarefas </a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="perfil.html"> Perfil </a>
-                </li>
-            </ul>
-            <span class="navbar-text">
-                <a href="login.html"> Logout </a> 
-            </span>
+    <nav class="navbar navbar-expand-lg
+     navbar-light bg-light">
+        <a href="#" class="navbar-brand"> 
+            Gerenciador de Tarefas</a>
+            <button class="navbar-toggler" type="button"
+            data-toggle="collapse" data-target="#textoNavbar"
+            aria-controls="textoNavbar" aria-expanded="false"
+            aria-label="Alternar Navegação">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="textoNavbar">
+                <ul class="navbar-nav mr-auto">
+                    <li class="nav-item">
+                        <a href="index.html" class="nav-link">Home</a>
+                    </li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="tarefa.html"
+                            id="navbarDropdown" role="button" data-toggle="dropdown"
+                            aria-haspopup="true" aria-expanded="false">
+                            Tarefas
+                        </a>
+                        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                            <a class="dropdown-item" href="tarefas.html"> Todas </a>
+                            <div class="dropdown-divider"></div>
+                            <a class="dropdown-item" href="tarefas.html"> Academicas </a>
+                            <a class="dropdown-item" href="tarefas.html"> Profissionais </a>
+                            <a class="dropdown-item" href="tarefas.html"> Pessoais </a>
+                        </div>
+                    </li> 
+                    <li class="nav-item">
+                        <a href="perfil.html" class="nav-link">Perfil</a>
+                    </li>    
+                </ul>
+                <span class="navbar-text">
+                    <a href="login.html">Logout</a> 
+                </span>
+            </div>
+        </nav>
+        <div class="row mt-4 ml-1 mr-1">
+            <div class="col-sm-4">
+                <div class="card">
+                    <div class="card-header">
+                        Categoria Tarefa
+                    </div>
+                    <div class="card-body">
+                        <h5 class="card-title"> Título Tarefa </h5>
+                        <p class="card-text">
+                            Descrição da tarefa... Descrição da tarefa... 
+                            Descrição da tarefa... Descrição da tarefa... 
+                            Descrição da tarefa... Descrição da tarefa...
+                            Descrição da tarefa... Descrição da tarefa...
+                        </p>
+                        <a href="#" class="btn btn-primary"
+                           data-toggle="modal" data-target="#ModalTarefas"> 
+                            Ver 
+                        </a>
+                        <a href="#" class="btn btn-danger">Excluir</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm-4">
+                <div class="card">
+                    <div class="card-header">
+                        Categoria Tarefa
+                    </div>
+                    <div class="card-body">
+                        <h5 class="card-title"> Título Tarefa </h5>
+                        <p class="card-text">
+                            Descrição da tarefa... Descrição da tarefa... 
+                            Descrição da tarefa... Descrição da tarefa... 
+                            Descrição da tarefa... Descrição da tarefa...
+                            Descrição da tarefa... Descrição da tarefa...
+                        </p>
+                        <a href="#" class="btn btn-primary"
+                           data-toggle="modal" data-target="#ModalTarefas"> 
+                            Ver 
+                        </a>
+                        <a href="#" class="btn btn-danger">Excluir</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm-4">
+                <div class="card">
+                    <div class="card-header">
+                        Categoria Tarefa
+                    </div>
+                    <div class="card-body">
+                        <h5 class="card-title"> Título Tarefa </h5>
+                        <p class="card-text">
+                            Descrição da tarefa... Descrição da tarefa... 
+                            Descrição da tarefa... Descrição da tarefa... 
+                            Descrição da tarefa... Descrição da tarefa...
+                            Descrição da tarefa... Descrição da tarefa...
+                        </p>
+                        <a href="#" class="btn btn-primary"
+                           data-toggle="modal" data-target="#ModalTarefas"> 
+                            Ver 
+                        </a>
+                        <a href="#" class="btn btn-danger">Excluir</a>
+                    </div>
+                </div>
+            </div>
         </div>
-    </nav>
-    <h1>Página de Tarefas</h1>
+        <div class="row mt-4 ml-1 mr-1">
+            <div class="col-sm-4">
+                <div class="card">
+                    <div class="card-header">
+                        Categoria Tarefa
+                    </div>
+                    <div class="card-body">
+                        <h5 class="card-title"> Título Tarefa </h5>
+                        <p class="card-text">
+                            Descrição da tarefa... Descrição da tarefa... 
+                            Descrição da tarefa... Descrição da tarefa... 
+                            Descrição da tarefa... Descrição da tarefa...
+                            Descrição da tarefa... Descrição da tarefa...
+                        </p>
+                        <a href="#" class="btn btn-primary"
+                           data-toggle="modal" data-target="#ModalTarefas"> 
+                            Ver 
+                        </a>
+                        <a href="#" class="btn btn-danger">Excluir</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm-4">
+                <div class="card">
+                    <div class="card-header">
+                        Categoria Tarefa
+                    </div>
+                    <div class="card-body">
+                        <h5 class="card-title"> Título Tarefa </h5>
+                        <p class="card-text">
+                            Descrição da tarefa... Descrição da tarefa... 
+                            Descrição da tarefa... Descrição da tarefa... 
+                            Descrição da tarefa... Descrição da tarefa...
+                            Descrição da tarefa... Descrição da tarefa...
+                        </p>
+                        <a href="#" class="btn btn-primary"
+                           data-toggle="modal" data-target="#ModalTarefas"> 
+                            Ver 
+                        </a>
+                        <a href="#" class="btn btn-danger">Excluir</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm-4">
+                <div class="card">
+                    <div class="card-header">
+                        Categoria Tarefa
+                    </div>
+                    <div class="card-body">
+                        <h5 class="card-title"> Título Tarefa </h5>
+                        <p class="card-text">
+                            Descrição da tarefa... Descrição da tarefa... 
+                            Descrição da tarefa... Descrição da tarefa... 
+                            Descrição da tarefa... Descrição da tarefa...
+                            Descrição da tarefa... Descrição da tarefa...
+                        </p>
+                        <a href="#" class="btn btn-primary"
+                           data-toggle="modal" data-target="#ModalTarefas"> 
+                            Ver 
+                        </a>
+                        <a href="#" class="btn btn-danger">Excluir</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col-md-12 text-center pt-5">
+                <a href="#" class="btn btn-success"
+                 data-toggle="modal" data-target="#ModalCadastrarTarefa">
+                    +Adicionar
+                </a>
+            </div>
+        </div>
+  
+        <div class="modal fade" id="ModalTarefas" tabindex="-1"
+            role="dialog" aria-labelledby="TituloModalTarefas" 
+            aria-hidden="true">
+                <div class="modal-dialog" role="document">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <h5 class="modal-title" id="TituloModalTarefas"> 
+                                Título da Tarefa
+                            </h5>
+                            <button type="button" class="close"
+                                data-dismiss="modal" aria-label="Fechar">
+                                    <span aria-hidden="true">
+                                        &times;
+                                    </span>
+                            </button>
+                        </div>
+                        <div class="modal-body">
+                            Conteúdo da tarefa... <br />
+                            Conteúdo da tarefa... <br />
+                            Conteúdo da tarefa... <br />
+                            Conteúdo da tarefa... <br />
+                            Conteúdo da tarefa... <br />
+                        </div>
+                        <div class="modal-footer">
+                            <button type="button" class="btn btn-secondary"
+                                data-dismiss="modal">
+                                    Ok
+                            </button>
+                        </div>
+                    </div>
+                </div>
+        </div>
+
+        <div class="modal fade" id="ModalCadastrarTarefa" tabindex="-1"
+            role="dialog" aria-labelledby="TituloModalTarefas" 
+            aria-hidden="true">
+                <div class="modal-dialog" role="document">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <h5 class="modal-title" id="TituloModalTarefas"> 
+                                Cadastro de Tarefa
+                            </h5>
+                            <button type="button" class="close"
+                                data-dismiss="modal" aria-label="Fechar">
+                                    <span aria-hidden="true">
+                                        &times;
+                                    </span>
+                            </button>
+                        </div>
+                        <div class="modal-body">
+                            <label>Categoria</label>
+                            <select class="form-control">
+                                <option> Academica </option>
+                                <option> Profissional </option>
+                                <option> Pessoal </option>
+                            </select>
+                            <label>Título</label>
+                            <input type="text" class="form-control">
+                            <label>Descrição</label>
+                            <textarea class="form-control" rows="3"></textarea>
+                            <label>Prioridade</label>
+                            <input type="range" class="form-control">
+                        </div>
+                        <div class="modal-footer">
+                            <button type="button" class="btn btn-success"
+                                data-dismiss="modal">
+                                    Salvar
+                            </button>
+                        </div>
+                    </div>
+                </div>
+        </div>
     </body>
 </html>
