Adição de rotas

--- a/pages/index.html
+++ b/pages/index.html
@@ -89,11 +89,101 @@
             <div class="row">
                 <div class="col-lg-6 mb-5">
                     <div class="card bg-light border-0 h-100">
-
+                        <div class="card-body text-center p-4 p-lg-5
+                            pt-0 pt-lg-0">
+                                <h2 class="fs-4 fw-bold">
+                                    Organize suas tarefas
+                                </h2>
+                                <p class="mb-0">
+                                    Use esse sistema e organize suas tarefas
+                                    e blablablablalbalblabla blablabla
+                                </p>
+                                <button class="btn btn-primary" data-bs-toggle="collapse"
+                                    data-bs-target="#info1">
+                                    Ver mais
+                                </button>
+                                <div id="info1" class="collapse">
+                                    Texto com mais informações sobre essa
+                                    caracteristica do meu sistema
+                                    e muito mais blablablablalbalblablablablalblablalbalbla
+                                    vlalvlblalbalblablalbal
+                                </div>
+                        </div>    
+                    </div>
+                </div>
+                <div class="col-lg-6 mb-5">
+                    <div class="card bg-light border-0 h-100">
+                        <div class="card-body text-center p-4 p-lg-5
+                            pt-0 pt-lg-0">
+                                <h2 class="fs-4 fw-bold">
+                                    Veja sua produtivadade
+                                </h2>
+                                <p class="mb-0">
+                                    Use esse sistema e verifique o quão
+                                    produtivo você está sendo e 
+                                    blablablablalbalblablablablalblablalbal
+                                    blalbla
+                                </p>
+                                <button class="btn btn-primary" data-bs-toggle="collapse"
+                                    data-bs-target="#info2">
+                                    Ver mais
+                                </button>
+                                <div id="info2" class="collapse">
+                                    Texto com mais informações sobre essa
+                                    caracteristica do meu sistema
+                                    e muito mais blablablablalbalblablablablalblablalbalbla
+                                    vlalvlblalbalblablalbal
+                                </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-lg-6 mb-5">
+                    <div class="card bg-light border-0 h-100">
+                        <div class="card-body text-center p-4 p-lg-5
+                            pt-0 pt-lg-0">
+                                <h2 class="fs-4 fw-bold">
+                                    Organize suas tarefas
+                                </h2>
+                                <p class="mb-0">
+                                    Use esse sistema e organize suas tarefas
+                                    e blablablablalbalblabla blablabla
+                                </p>
+                                <button class="btn btn-primary">
+                                    Ver mais
+                                </button>
+                        </div>    
+                    </div>
+                </div>
+                <div class="col-lg-6 mb-5">
+                    <div class="card bg-light border-0 h-100">
+                        <div class="card-body text-center p-4 p-lg-5
+                            pt-0 pt-lg-0">
+                                <h2 class="fs-4 fw-bold">
+                                    Veja sua produtivadade
+                                </h2>
+                                <p class="mb-0">
+                                    Use esse sistema e verifique o quão
+                                    produtivo você está sendo e 
+                                    blablablablalbalblablablablalblablalbal
+                                    blalbla
+                                </p>
+                                <button class="btn btn-primary">
+                                    Ver mais
+                                </button>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
     </section>
+    <footer class="py-5 bg-dark">
+        <div class="container">
+            <p class="m-0 text-center text-white">
+                Copyright &copy; Your Website 2022
+            </p>
+        </div>
+    </footer>
 </body>
 </html>
